--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,15 @@ plugins:
           options:
             show_signature: true
             show_source: false
+            heading_level: 3
+            show_root_heading: false
+            show_root_toc_entry: false
+            show_object_full_path: false
+            show_category_heading: false
+            group_by_category: false
+            members_order: source
+            docstring_style: google
+            merge_init_into_class: true
 
 extra:
   analytics:
@@ -73,6 +82,7 @@ markdown_extensions:
   - codehilite
   - toc:
       permalink: true
+      toc_depth: 3
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
